[package]
edition = "2021"
name = "exit-no-std"
version = "0.3.0"
rust-version = "1.91"
authors = ["warlock <internalmike@gmail.com>"]
description = "Cross-platform interface to the process exit function."
readme = "README.md"
documentation = "https://docs.rs/exit-no-std/"
keywords = ["errno", "no_std", "unix", "windows", "linux"]
categories = ["os", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/exit-no-std"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[target.'cfg(dos)'.dependencies]
pc-ints = "0.4.0"

[target.'cfg(all(not(dos), not(windows)))'.dependencies]
libc = { version = "0.2.126", default-features = false }

[target.'cfg(all(not(dos), windows))'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[badges]
maintenance = { status = "passively-maintained" }
